...
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textColor="@android:color/white"
            android:title="@string/app_title"/>

        <ImageButton
            android:id="@+id/options_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="10dp"
            android:background="@android:color/transparent"
            android:backgroundTint="@android:color/transparent"
            android:src="@mipmap/ic_more_vert_white_24dp"
            android:tint="@null"/>

        <ImageButton
            android:id="@+id/search_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toLeftOf="@id/options_toolbar"
            android:background="@android:color/transparent"
...
