...
            android:layout_marginLeft="26dp"

            android:layout_marginTop="20dp"
            android:text="Dark Theme"/>

        <Switch
            android:id="@+id/switch_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:layout_marginTop="10dp"
...
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="20dp"
            android:text="Notification"/>

        <Switch
            android:id="@+id/switch_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:theme="@style/Color1SwitchStyle"/>
...
