<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Categories">
        <menu>
            <item
                android:id="@+id/nav_world"
                android:title="World"/>
            <item
                android:id="@+id/nav_politics"
                android:title="Politics"/>
            <item
                android:id="@+id/nav_business"
                android:title="Business"/>
            <item
                android:id="@+id/nav_technology"
                android:title="Technology"/>
            <item
                android:id="@+id/nav_science"
                android:title="Science"/>
            <item
                android:id="@+id/nav_sports"
                android:title="Sports"/>
            <item
                android:id="@+id/nav_movies"
                android:title="Movies"/>
            <item
                android:id="@+id/nav_fashion"
                android:title="Fashion"/>

            <item
                android:id="@+id/nav_food"
                android:title="Food"/>
            <item
                android:id="@+id/nav_health"
                android:title="Health"/>
            <item
                android:id="@+id/nav_miscellaneous"
                android:title="Miscellaneous"/>


        </menu>
    </item>
    <!--<item android:title="Sources">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="Share"/>-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send"/>-->
        <!--</menu>-->
    <!--</item>-->

</menu>
